# pytest_course

./: .gitignore  pyproject.toml
functions/: bool.py  fixtures.py  metrics.py  mock.py
tests/: test_api.py  test_basic1.py  test_estruturas.py  test_fixtures.py  test_soma.py
